# ctf_sloppy

./: .gitignore  Cargo.toml  README.md  install.sh  version_control.md
crates/api/src/: error.rs  sse.rs  types.rs
crates/ctf-cli/: Cargo.toml  USAGE.md  litellm_config.yaml
crates/ctf-cli/scripts/: setup_4090.sh  setup_h100.sh  setup_kaggle.ipynb  setup_lowend.sh
crates/ctf-cli/src/: auth.rs  challenge.rs  ctfd.rs  flag.rs  input.rs  knowledge.rs  main.rs  mcp_tools.rs  prompt.rs  render.rs
crates/runtime/src/: bash.rs  conversation.rs
crates/rusty-claude-cli/src/: main.rs  render.rs
crates/tools/src/: lib.rs
