[package]
name = "ctf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "ctf"
path = "src/main.rs"

[dependencies]
api      = { path = "../api" }
runtime  = { path = "../runtime" }
tools    = { path = "../tools" }
commands = { path = "../commands" }
crossterm    = "0.28"
pulldown-cmark = "0.13"
rustyline    = "15"
serde_json   = "1"
syntect      = "5"
tokio        = { version = "1", features = ["rt-multi-thread", "time"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util  = "0.3"
regex         = "1"
signal-hook   = "0.3"

[lints]
workspace = true
